--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   infinite_scroll_pagination: ^3.2.0
   flutter_secure_storage: ^5.0.2
+  flutter_markdown: ^0.6.10+2
 
 dev_dependencies:
   flutter_test:
